[package]
name       = "eip-2539-test-gen"
authors    = { workspace = true }
edition    = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dev-dependencies]
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
hex = "0.4.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
