[package]
name       = "eip-3026-test-gen"
authors    = { workspace = true }
edition    = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dev-dependencies]
ark-algebra-bench-templates = { version = "0.4.0", default-features = false }
ark-serialize               = { version = "0.4.0", default-features = false }
ark-bw6-761                 = { version = "0.4.0", default-features = false }
ark-ec                      = { version = "0.4.2", default-features = false }
ark-ff                      = { version = "0.4.2", default-features = false }
ark-std                     = { version = "0.4.0", default-features = false }
parity-crypto               = { version = "0.9.0", features = ["publickey"] }
serde                       = { version = "1.0.159", features = ["derive"] }
serde_json                  = "1.0.95"
criterion                   = "0.4"
hex                         = "0.4.3"


[[bench]]
name = "bw6_761"
path = "benches/bw6_761.rs"
harness = false

[[bench]]
name = "ec_recover"
path = "benches/ec_recover.rs"
harness = false
